Thu Jun 05 06:06:49 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add a new parameter, "weight_params",
	  to the search() method, to allow the weighting system to be
	  modified.
	* docs/weighting.rst: Document the available weighting parameters.
	* build.py: Add weighting.rst to the documentation build.
	* xappy/unittests/weight_action.py: Modify the path so this test
	  can be run standalone.
	* xappy/unittests/weight_params.py: Add test of the weight_params
	  parameter to search().

Wed Jun 04 14:10:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/unittests/db_type_compat1.py:
	  If a database exists, but isn't a flint database, catch the
	  DatabaseOpeningError and try to open it anyway.  Add test for
	  this behaviour.

Wed Jun 04 14:08:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/testdata/chert_db/,
	  xappy/unittests/testdata/flint_db/: Add some empty databases in
	  chert and flint formats for testing.

Wed Jun 04 07:46:31 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/facet_hierarchy_1.py,
	  xappy/unittests/testdata/old_facet_db/: Fix bug in the backwards
	  compatibility code for facet hierarchies.  Add a database in the
	  old format, and a test which uses this to check the backwards
	  compatibility code.

Fri May 30 11:00:59 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/facet_hierarchy_1.py: Allow multiple parent
	  facets to be defined for each child.

Mon May 12 19:58:34 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* docs/introduction.rst: Add documentation of the WEIGHT action.
	* xappy/fieldactions.py: Convert field values for WEIGHT fields to
	  float before storing them.
